--- a/style.css
+++ b/style.css
@@ -4,10 +4,21 @@
   box-sizing: border-box;
 }
 body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
   background-image: url(http://aforismi.meglio.it/img/frasi/matematica.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  border: 2px solid black;
+  height: 40%;
 }
 h1 {
   color: rgb(193, 22, 179);
