--- a/style.css
+++ b/style.css
@@ -16,9 +16,40 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: auto;
+  height:400px;
+  width: 700px;
+  /* margin: auto; */
   border: 2px solid black;
   height: 40%;
+  animation-name: movie;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  position: absolute;
+}
+@keyframes movie {
+  0% { background-color: red;
+       top:0;
+       left:0;
+
+  }
+  25% {
+    top:0;
+    left: calc(100% - 700px);
+  }
+  50% {
+    top: 60%;
+    left: calc(100%-700px);
+  }
+  75% {
+      top: 60%;
+      left:0;
+  }
+  100% {
+    background-color: green;
+    top: 0;
+    left:0;
+  }
+
 }
 h1 {
   color: rgb(193, 22, 179);
